# Amethyst-OS

./: Cargo.toml  README.md  amethyst.sh  build.sh  iso.sh  kernel_target.json
boot/: Cargo.toml  main.rs
boot/src/: main.rs
krnl/: main.rs
src/: main.rs
