[package]
name = "amethyst-os-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.15.2", features = ["exts"] }
uefi-services = "0.12.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target="x86_64-unknown-efi"